<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyA_aCmSOq-PAvMUMce0CX7pZI_pEr21bx4</string>
    <string name="app_name">WeatherAQI</string>
    <string name="start">Bắt đầu</string>
    <string name="version">Phiên bản</string>
    <string name="update_title_version">Phiên bản mới</string>
    <string name="update_content">Cập nhật nội dung</string>
    <string name="version_update"> Để sau</string>
    <string name="update_yes_version">Cập nhật ngay</string>
    <string name="token_expired">Phiên đăng nhập hết hạn. Vui lòng đăng nhập lại</string>
    <string name="loading">Đang tải…</string>
    <string name="search">Tìm kiếm</string>
    <string name="cancel_upload">Hủy</string>
    <string name="uploading">Tiến trình - [[PROGRESS]]</string>
    <string name="upload_success">Tải thành công trong [[ELAPSED_TIME]]</string>
    <string name="upload_error">Lỗi xảy ra khi tải lên</string>
    <string name="multipart_upload">Tải lên Server</string>
    <string name="upload_cancelled">Trình tải lên đã hủy</string>
    <string name="enter_quantity">Nhập số lượng</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="decrease">Giảm</string>
    <string name="increase">Tăng</string>
    <string name="done">Xong</string>
    <string name="common_loading">Đang tải&#8230;</string>
    <string name="common_confirm">Xác nhận</string>
    <string name="common_cancel">Hủy bỏ</string>
    <string name="status_layout_no_data">Trống rỗng</string>
    <string name="status_layout_error_request">Yêu cầu lỗi, vui lòng thử lại</string>
    <string name="status_layout_error_network">Lỗi mạng, vui lòng thử lại</string>
    <string name="status_layout_retry">Thử lại</string>
    <string name="from">Từ</string>
    <string name="to">Đến</string>
    <string name="common_network_error">Mạng hiện tại không khả dụng, vui lòng kiểm tra cài đặt mạng</string>
    <string name="common_no_more_data">Không có thêm dữ liệu</string>
    <string name="common_web_ssl_error_title">Chứng chỉ bảo mật trang web hiện tại đã hết hạn hoặc không đáng tin cậy\nTiếp tục duyệt</string>
    <string name="common_web_ssl_error_allow">Tiếp tục</string>
    <string name="common_web_ssl_error_reject">Quay lại</string>
    <string name="common_web_call_phone_title">Số lượng hiện tại %s</string>
    <string name="common_web_call_phone_allow">Quay số</string>
    <string name="common_web_call_phone_reject">Hủy bỏ</string>
    <string name="http_data_explain_error">Ngoại lệ phân tích cú pháp dữ liệu, vui lòng đợi</string>
    <string name="http_server_out_time">Không có phản hồi từ máy chủ</string>
    <string name="http_network_error">Yêu cầu không thành công, vui lòng kiểm tra cài đặt mạng</string>
    <string name="http_response_error">Máy chủ phản hồi bất thường, vui lòng thử lại sau</string>
    <string name="http_server_error">Lỗi kết nối máy chủ, vui lòng thử lại sau</string>
    <string name="http_request_cancel">Yêu cầu đã bị gián đoạn, vui lòng thử lại</string>
    <string name="http_response_null_body">Dữ liệu máy chủ trả về ngoại lệ, vui lòng thử lại sau</string>
    <string name="http_response_md5_error">Tải xuống không thành công, xác minh tệp md5 không thành công</string>
    <string name="monday">Thứ 2</string>
    <string name="tuesday">Thứ 3</string>
    <string name="wednesday">Thứ 4</string>
    <string name="thursday">Thứ 5</string>
    <string name="friday">Thứ 6</string>
    <string name="saturday">Thứ 7</string>
    <string name="sunday">Chủ nhật</string>
    <string name="today">Hôm nay</string>
    <string name="yesterday">Hôm qua</string>
    <string name="this_week">Tuần này</string>
    <string name="this_month">Tháng này</string>
    <string name="last_month">Tháng trước</string>
    <string name="three_months">3 tháng gần nhất</string>
    <string name="this_year">Năm nay</string>
    <string name="last_year">Năm trước</string>
    <string name="three_years">3 năm gần nhất</string>
    <string name="all_years">Tất cả các năm</string>
    <string name="day_to_day">Ngày đến ngày</string>
    <string name="month_to_month">Tháng đến tháng</string>
    <string name="year_to_year">Năm đến năm</string>
    <string name="chat">Chat</string>
    <string name="home">Trang chủ</string>
    <string name="notification">Thông báo</string>
    <string name="account">Tài Khoản</string>
    <string name="no_support">Tài khoản của bạn hiện tại không hỗ trợ tính năng này</string>
    <string name="no_data">Hiện tại không có dữ liệu</string>
    <string name="data_empty">Không có dữ liệu</string>
    <string name="please_update_level">Vui lòng nâng cấp Tài khoản để trải nghiệm!</string>
    <string name="please_update_data">Vui lòng cập nhật nội dung để trải nghiệm!</string>
    <string name="default_image">Default image</string>
    <string name="company_name"> Tên Công Ty</string>
    <string name="res_name_min_characters">* Tên công ty phải lớn hơn 4 và tối đa 50 kí tự</string>
    <string name="res_acount_min_characters">* Tên tài khoản phải lớn hơn 8 và tối đa 10  kí tự</string>
    <string name="password"> Mật Khẩu</string>
    <string name="res_password_min_characters">* Mật Khẩu phải lớn hơn 4 tối đa 20 kí tự</string>
    <string name="res_null_account_characters">* Tài khoản không được để trống</string>
    <string name="res_null_company_characters">* Tên công ty không được để trống</string>
    <string name="res_null_password_characters">* Mật khẩu không được để trống</string>
    <string name="load_success">Tải ảnh thành công </string>
    <string name="load_fail">Tải ảnh thất bại </string>
    <string name="fingerprint_authentication">Xác thực vân tay cho ứng dụng của bạn </string>
    <string name="login_biometric">Đăng nhập bằng thông tin sinh trắc học của bạn </string>
    <string name="using_account_password_your">Sử dụng mật khẩu tài khoản của bạn  </string>
    <string name="no_fingerprint">Thiết bị không có cảm biến vân tay  </string>
    <string name="fingerprint_unavailable">Cảm biến vân tay không khả dụng hiện tại  </string>
    <string name="unregistered_fingerprint">Thiết bị có cảm biến vân tay nhưng không có vân tay nào được đăng ký </string>
    <string name="security_update">Cần cập nhật bảo mật trên thiết bị </string>
    <string name="no_fingerprint_authentication_device">Xác thực vân tay không được hỗ trợ trên thiết bị này </string>
    <string name="fingerprint_authentication_status_unknown">Trạng thái xác thực vân tay không xác định </string>
    <string name="information_staff"> Thông tin nhân viên </string>
    <string name="trademark">Thương hiệu</string>
    <string name="branch">Chi nhánh</string>
    <string name="competence">Chức vụ</string>
    <string name="citizen_identification">CCCD</string>
    <string name="gender">Giới tính</string>
    <string name="cellphone">Số điện thoại </string>
    <string name="birthday">Sinh nhật </string>
    <string name="login">Đăng nhập</string>
    <string name="login_fail">Đăng nhập thất bại </string>
    <string name="logout">Đăng xuất</string>
    <string name="confirm_logout">Bạn muốn đăng xuất ?</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="forgot_password">Bạn quên mật khẩu ?</string>
    <string name="setting_login">Cài đặt đăng nhập</string>
    <string name="setting">Cài đặt </string>
    <string name="terms_of_use">Điều khoản sử dụng</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="feedback">Góp ý nhà phát triển</string>
    <string name="rating_app">Đánh giá ứng dụng</string>
    <string name="info">Thông tin ứng dụng</string>
    <string name="information">Thông tin</string>
    <string name="update">Cập nhật</string>
    <string name="save">Lưu lại</string>
    <string name="info_profile">Thông tin tài khoản</string>
    <string name="sex">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="full_name">Họ và tên</string>
    <string name="birthday_day">Ngày sinh</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ</string>
    <string name="choose_city">Chọn thành phố</string>
    <string name="choose_district">Chọn quận/huyện</string>
    <string name="choose_ward">Chọn phường/xã</string>
    <string name="phone">Số điện thoại</string>
    <string name="identity_card">CMND/CCCD</string>
    <string name="check_out">Check out</string>
    <string name="check_out_succesful">Check out thành công</string>
    <string name="empty_mail">Vui lòng nhập email</string>
    <string name="e_mail">Email</string>
    <string name="not_empty_name">Tên không được để trống</string>
    <string name="invalid_name">Tên không hợp lệ</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="not_empty_address">Địa chỉ không được để trống</string>
    <string name="no_select_city">Bạn chưa chọn Tỉnh/Thành phố</string>
    <string name="no_select_district">Bạn chưa chọn Quận/Huyện</string>
    <string name="please_choose_city">Vui lòng chọn tỉnh thành</string>
    <string name="please_choose_district">Vui lòng chọn quận huyện</string>
    <string name="please_choose_ward">Vui lòng chọn phường xã</string>
    <string name="update_success">Cập nhật thành công</string>
    <string name="create_success">Tạo thành công</string>
    <string name="error_phone">Số điện thoại chưa đúng 10 số</string>
    <string name="max_phone">Số điện thoại tối đa 10 số</string>
    <string name="email_invalid_length">Email không được vượt quá 50 ký tự</string>
    <string name="invalid_address">Địa chỉ không hợp lệ</string>
    <string name="confirm">Xác nhận</string>
    <string name="feed_back">Góp ý nhà phát triển</string>
    <string name="feed_back_full_name">Người gửi</string>
    <string name="feed_back_hint">Nội dung góp ý</string>
    <string name="feed_back_email">Email</string>
    <string name="feed_back_phone">Điện thoại</string>
    <string name="feed_back_type">Bạn muốn góp ý điều gì?</string>
    <string name="requires_improvement">Yêu cầu cải tiến</string>
    <string name="suggest_to_do_more">Đề nghị làm thêm</string>
    <string name="input_describe_error">Nhập mô tả lỗi</string>
    <string name="please_input_describe_error">Vui lòng nhập miêu tả lỗi</string>
    <string name="empty_feedback">Vui lòng nhập chi tiết nội dung góp ý</string>
    <string name="describe_max">Mô tả tối đa 2000 ký tự</string>
    <string name="send_error_success">Gửi thành công</string>
    <string name="cancel">Hủy</string>
    <string name="common_year">Năm</string>
    <string name="common_month">Tháng</string>
    <string name="common_day">Ngày</string>
    <string name="back_confirm">Nhấn lần nữa để thoát ứng dụng</string>
    <string name="link_youtube_1">youtu.be/</string>
    <string name="link_youtube_2">youtube.com/</string>
    <string name="link_youtube_4">youtube.com/watch?v=</string>
    <string name="link_youtube_3">youtube.com/shorts/</string>
    <string name="finish_now">Vừa xong</string>
    <string name="minute_ago">%d phút</string>
    <string name="minute_ago_notify">%d phút trước</string>
    <string name="hour_ago">%d giờ</string>
    <string name="hour_ago_notify">%d giờ trước</string>
    <string name="day_ago">%d ngày</string>
    <string name="day_ago_notify">%d ngày trước</string>
    <string name="close">Đóng</string>
    <string name="title_login">Module Login</string>
    <string name="title_utility">Module Utility</string>
    <string name="supplier">Nhà cung cấp</string>
    <string name="input_password">Nhập mã OTP</string>
    <string name="back_to_login">Quay về đăng nhập</string>
    <string name="input_new_password">Nhập mật khẩu mới</string>
    <string name="again_input_new_password">Nhập lại mật khẩu mới</string>
    <string name="receiver_otp">Nhận mã OTP</string>
    <string name="update_password">Cập nhật mật khẩu</string>
</resources>