<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_16"
        android:layout_gravity="center"
        android:padding="0dp"
        android:elevation="0dp"
        style="?android:attr/borderlessButtonStyle"
        app:cardCornerRadius="@dimen/dp_8"
        tools:context=".ui.dialog.UpdateDialog">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/check_update"
                android:padding="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:orientation="vertical">

                    <vn.techres.android.supplier.widget.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_title_version"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14" />

                    <vn.techres.android.supplier.widget.AppTextView
                        android:id="@+id/tv_update_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_5"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14"
                        tools:text="3.2.1" />
                    />

                </LinearLayout>


            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="vertical"
                android:padding="0dp">

                <vn.techres.android.supplier.widget.AppTextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:text="@string/update_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <vn.techres.android.supplier.widget.AppTextView
                    android:id="@+id/tv_update_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    android:layout_marginVertical="@dimen/dp_10"
                    android:lineSpacingExtra="@dimen/dp_5"
                    android:maxLines="4"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:textColor="@color/black60"
                    android:textSize="@dimen/sp_12"
                    tools:text="6\n66\n666\n6666\n66666" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <vn.techres.android.supplier.widget.AppTextViewBold
                        android:id="@+id/tv_update_close"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_left_button"
                        android:focusable="true"
                        android:textAllCaps="true"
                        style="?android:attr/borderlessButtonStyle"
                        android:gravity="center"
                        android:paddingVertical="@dimen/dp_4"
                        android:text="@string/version_update"
                        android:textColor="@color/common_cancel_text_color"
                        android:textSize="@dimen/sp_14" />

                    <View
                        android:id="@+id/v_ui_line"
                        android:layout_width="@dimen/line_size"
                        android:layout_height="match_parent"
                        android:background="@color/common_line_color" />

                    <vn.techres.android.supplier.widget.AppButtonBold
                        android:id="@+id/tv_update_update"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_border_right_button"
                        android:elevation="0dp"
                        android:gravity="center"
                        style="?android:attr/borderlessButtonStyle"
                        android:paddingVertical="@dimen/dp_4"
                        android:text="@string/update_yes_version"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>